--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy = "0.10.0"
 bevy_rapier2d = "0.21.0"
 leafwing-input-manager = "0.9.0"
+rand = "0.8.5"
 
 [profile.dev.package."*"]
 opt-level = 3
